[workspace]
members = ["argopt-impl"]

[package]
name = "argopt"
version = "0.1.0"
authors = ["tanakh"]
edition = "2018"
license = "MIT"
description = "Parse command line argument by defining a function."
repository = "https://github.com/tanakh/argopt"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["argument", "cli", "arg", "parser", "parse"]

[badges]
github = { repository = "tanakh/argopt", workflow = "Rust" }

[dependencies]
argopt-impl = { path = "argopt-impl", version = "0.1" }
structopt = "0.3.16"

[dev-dependencies]
log = "0.4.11"
