[workspace]
members = ["argopt-impl"]

[package]
name = "argopt"
version = "0.2.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Parse command line argument by defining a function."
repository = "https://github.com/tanakh/argopt"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["argument", "cli", "arg", "parser", "parse"]

[dependencies]
argopt-impl = { path = "argopt-impl", version = "0.2.0" }
clap = { version = "3.0.7", features = ["derive"] }

[dev-dependencies]
log = "0.4.11"
tokio = { version = "1.16.1", features = ["full"] }
