[package]
name = "argopt-impl"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Parse command line argument by defining a function."
repository = "https://github.com/tanakh/argopt"
categories = ["command-line-interface"]
keywords = ["argument", "cli", "arg", "parser", "parse"]

[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
quote = "1.0.14"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
