[package]
name = "argopt-impl"
version = "0.2.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Parse command line argument by defining a function."
repository = "https://github.com/tanakh/argopt"
categories = ["command-line-interface"]
keywords = ["argument", "cli", "arg", "parser", "parse"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
darling = "0.13.1"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "extra-traits"] }
